adding an image and updating the index page

--- a/index.html
+++ b/index.html
@@ -33,16 +33,27 @@
   <div class="container home_2col">
     <div class="row">
       <div class="col">
-        <img src="images/house.jpg" class="rounded d-block dibley" alt="...">
+        <img src="images/bethany-field-large.jpeg" class="rounded d-block dibley" alt="...">
       </div>
       <div class="col">
         <h1>Bethany Robinson: WEBD-225</h1>
       </div>
     </div>
   </div><!--end 2col-->
+  <p> As a tester with 17 years of experience and a degree in Software Engineering, I bring passion for testing and skills to help teams architect solutions to bring to market. 
+    I enjoy understanding the problems that teams are faced with and working with team members to find the best path forward. As a leader on my team and the testing community, 
+    I work with leadership to mentor new testers and guide the direction of testing within the organization.</p>
+  <article>
+    <h2>Week 2</h2>
+    <p>
+      My biggest take away learning from week two has been about scss and sass. I had seen this through work, but didn't have much of an understanding about how it works and why it's useful.
+      I found that playing with the diffeent options and seeing the video of how compiled css works to be really fascinating. I enjoyed the discussion assignment and the throught processes involved to 
+      change the color of each box. It was interesting seeing the different approaches that people took as well as the couple of different directions I took on my own. 
 
-  <p>This is filler text, otherwise known as lorem ipsum. It is nonsense text to fill space.</p>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc commodo hendrerit mi, et ultrices quam mollis at. Donec in nulla et sapien ultrices lacinia. Curabitur nunc nisi, volutpat non fringilla vitae, dapibus eu lacus. Curabitur sed velit molestie, scelerisque enim posuere, feugiat urna. Sed gravida rutrum lectus. Ut mattis ligula non cursus euismod. Ut ac egestas libero. Nam vulputate metus quis urna convallis vestibulum.</p>
+      I also learned more about github and its uses. I had not used it to host web pages before and found this to be very interesting. Additionally, I created a new branch in the UI, which is not my 
+      usual method of branch creation. I'm also enjoying the process of using Git with this class.
+    </p>
+  </article>
 </main><!-- /.container -->
 
 <!-- Bootstrap core JavaScript
