--- a/grid.html
+++ b/grid.html
@@ -7,35 +7,52 @@
   <meta name="author" content="">
   <title>Grid: Bethany Robinson</title>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
-  <!-- Bootstrap core CSS -->
-  <link href="css/styles.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="css/styles.css" >
+    <!--import fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Outfit:wght@100..900&display=swap" rel="stylesheet"> 
 
   <!-- Custom styles for this template -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Bethany Robinson</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home</a>
-      </li>
-      <li>
-        <a class="nav-link" href="grid.html">Grid</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="carousel.html">Carousel</a>
-    </li>
-      </li>
-              <li class="nav-item">
-      <a class="nav-link" href="about.html">About</a>
-  </li>
-    </ul>
-  </div>
+<nav class="navbar navbar-expand-md navbar-dark bg-custom fixed-top ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+            <img src="images/B-logo.png" alt="Logo: Letter B decorated with flowers" title="B logo" width="30" height="30">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="grid.html">Grid</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="carousel.html">Carousel</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index-week-1.html">Index1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="knitting.html">Knitting</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="skills.html">Skills</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
 
 <main role="main" class="container-fluid">
